<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@animator/navigation_home_icon_selector"
        android:menuCategory="secondary"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@animator/navigation_report_icon_selector"
        android:menuCategory="secondary"
        android:title="@string/report"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@animator/navigation_friends_icon_selector"
        android:menuCategory="secondary"
        android:title="@string/friends"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@animator/navigation_my_icon_selector"
        android:menuCategory="secondary"
        android:title="@string/my"
        app:showAsAction="always" />

</menu>