<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation_bar"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.skptemp.feature.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.skptemp.feature.report.ReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.skptemp.feature.friends.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.skptemp.feature.my.MyFragment"
        android:label="@string/my"
        tools:layout="@layout/fragment_my" />
</navigation>