<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/record_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                style="@style/KR_headline_20_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/charm_record_text_margin"
                android:gravity="center"
                android:text="@string/charm_record_title"
                android:textColor="@color/gray_900"
                app:layout_constraintBottom_toTopOf="@+id/emotion_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.skptemp.common.ui.component.EmotionLayout
                android:id="@+id/emotion_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/emotion_layout_height"
                app:layout_constraintBottom_toTopOf="@+id/selected_emotion_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <LinearLayout
                android:id="@+id/selected_emotion_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/emotion_layout_height"
                android:gravity="center_horizontal|top"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emotion_layout">

                <ImageView
                    android:id="@+id/selected_emotion"
                    android:layout_width="@dimen/selected_emotion_size"
                    android:layout_height="@dimen/selected_emotion_size"
                    android:scaleType="fitCenter" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_large"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/large_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_layout">

        <TextView
            android:id="@+id/record_text"
            style="@style/KR_headline_20_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/charm_record_text_margin"
            android:gravity="center"
            android:text="@string/record"
            android:textColor="@color/gray_900"
            app:layout_constraintBottom_toTopOf="@+id/record_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/record_edit"
            style="@style/KR_body_16_regular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/charm_record_text_margin"
            android:background="@drawable/record_edit_background"
            android:gravity="top"
            android:hint="@string/record_edit_hint"
            android:padding="@dimen/record_edit_padding"
            android:textColor="@color/gray_900"
            android:textColorHint="@color/gray_400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="312:148"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.skptemp.common.ui.component.LargeButton
        android:id="@+id/large_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:text="@string/record_done" />

</androidx.constraintlayout.widget.ConstraintLayout>